# midas-journal-316

Code/RTSTRUCT/: CMakeLists.txt  export2RTSTRUCT.cxx
Code/RTSTRUCT/Utilities_gdcm_src/: README.txt
Code/RTSTRUCT/Utilities_gdcm_src/bkp_old_files/: gdcmFileHelper_10.cxx  gdcmFileHelper_10.h  gdcmFile_10.cxx
Code/RTSTRUCT/code_IO/: README.txt
Code/mask2contour/: CMakeLists.txt  mask2contour.cxx
